Updated and overwrote colour vars to brand colours Minor fixes to footer navigation icon alignment

--- a/src/app/portal/features/site-header/site-header.component.scss
+++ b/src/app/portal/features/site-header/site-header.component.scss
@@ -18,7 +18,7 @@ a {
 }
 
 a#activePage {
-  background-color: var(--mat-sys-secondary);
+  background-color: var(--mat-sys-tertiary);
 }
 
 button {
